Add RISC64 Timer Implemention.To ensure the timer works properly on the RISC-V platform.
Signed-off-by: heyujiao99 <he.yujiao@sanechips.com.cn>

--- a/opal/include/opal/sys/Makefile.am
+++ b/opal/include/opal/sys/Makefile.am
@@ -42,4 +42,5 @@ headers += \
 include opal/sys/x86_64/Makefile.am
 include opal/sys/arm64/Makefile.am
 include opal/sys/powerpc/Makefile.am
+include opal/sys/riscv64/Makefile.am
 include opal/sys/gcc_builtin/Makefile.am
