--- a/.github/workflows/riscv64-qemu-tests.yaml
+++ b/.github/workflows/riscv64-qemu-tests.yaml
@@ -14,6 +14,7 @@ jobs:
         sudo apt update 
         sudo apt install -y --no-install-recommends qemu-user wget   
         wget ${riscv_gnu_toolchain_download_path}
+        mkdir -p /mnt/riscv
         tar -xvf riscv64-glibc-ubuntu-24.04-gcc-nightly-2025.07.03-nightly.tar.xz -C /mnt/riscv  
         export GCC_HOME=/mnt/riscv
         export PATH="$GCC_HOME/bin:$PATH"
