--- a/.github/workflows/riscv64-qemu-tests.yaml
+++ b/.github/workflows/riscv64-qemu-tests.yaml
@@ -14,9 +14,10 @@ jobs:
         sudo apt update 
         sudo apt install -y --no-install-recommends qemu-user wget   
         wget ${riscv_gnu_toolchain_download_path}
-        mkdir -p /mnt/riscv
-        tar -xvf riscv64-glibc-ubuntu-24.04-gcc-nightly-2025.07.03-nightly.tar.xz -C /mnt/riscv  
-        export GCC_HOME=/mnt/riscv
+        mkdir /opt/riscv
+        tar -xvf riscv64-glibc-ubuntu-24.04-gcc-nightly-2025.07.03-nightly.tar.xz -C /opt/riscv  
+        sed -i 's/libdir='\/mnt\/riscv\/riscv64-unknown-linux-gnu\/lib'/\/opt\/riscv\/riscv64-unknown-linux-gnu\/lib/' /opt/riscv/sysroot/lib/libatomic.la
+        export GCC_HOME=/opt/riscv
         export PATH="$GCC_HOME/bin:$PATH"
         export LD_LIBRARY_PATH="$GCC_HOME/lib:$LD_LIBRARY_PATH"
 
