--- a/.github/workflows/riscv64-qemu-tests.yaml
+++ b/.github/workflows/riscv64-qemu-tests.yaml
@@ -16,7 +16,7 @@ jobs:
         wget ${riscv_gnu_toolchain_download_path}
         mkdir /opt/riscv
         tar -xvf riscv64-glibc-ubuntu-24.04-gcc-nightly-2025.07.03-nightly.tar.xz -C /opt/riscv  
-        sed -i 's/libdir='\/mnt\/riscv\/riscv64-unknown-linux-gnu\/lib'/\/opt\/riscv\/riscv64-unknown-linux-gnu\/lib/' /opt/riscv/sysroot/lib/libatomic.la
+        sed -i "s|libdir='/mnt/riscv/riscv64-unknown-linux-gnu/lib'|libdir='/opt/riscv/riscv64-unknown-linux-gnu/lib'|g" /opt/riscv/sysroot/lib/libatomic.la
         export GCC_HOME=/opt/riscv
         export PATH="$GCC_HOME/bin:$PATH"
         export LD_LIBRARY_PATH="$GCC_HOME/lib:$LD_LIBRARY_PATH"
