--- a/.github/workflows/riscv64-qemu-tests.yaml
+++ b/.github/workflows/riscv64-qemu-tests.yaml
@@ -14,7 +14,7 @@ jobs:
         sudo apt update 
         sudo apt install -y --no-install-recommends qemu-user wget   
         wget ${riscv_gnu_toolchain_download_path}
-        tar -xvf riscv64-glibc-ubuntu-24.04-gcc-nightly-2025.07.03-nightly.tar.xz -C /opt/riscv  
+        tar -xvf riscv64-glibc-ubuntu-24.04-gcc-nightly-2025.07.03-nightly.tar.xz -C /opt
         sed -i "s|libdir='/mnt/riscv/riscv64-unknown-linux-gnu/lib'|libdir='/opt/riscv/riscv64-unknown-linux-gnu/lib'|g" /opt/riscv/sysroot/lib/libatomic.la
         export GCC_HOME=/opt/riscv
         export PATH="$GCC_HOME/bin:$PATH"
