--- a/.github/workflows/riscv64-qemu-tests.yaml
+++ b/.github/workflows/riscv64-qemu-tests.yaml
@@ -29,11 +29,10 @@ jobs:
       run: |
         ./autogen.pl
         sed -i '/^func_exec_program_core ()/,/^}/ s/\<exec\>/exec qemu-riscv64 -cpu rv64,v=true,vext_spec=v1.0,vlen=128 -L \$GCC_HOME\/sysroot/g' config/ltmain.sh
-        mkdir build && cd build
 
     - name: Config Open MPI
       run: |
-        ../configure 
+        ./configure 
           --prefix=$GCC_HOME 
           --host=riscv64-unknown-linux-gnu 
           SYSROOT=$GCC_HOME/sysroot 
